Prevent scroll on mobile

--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,11 @@
 
 html,
 body {
+  height: 100%;
   overflow: hidden;
+  position: fixed;
+  width: 100%;
+  overscroll-behavior: none;
 }
 
 body {
